Fixed some spacing issues

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -1,6 +1,7 @@
 .navbar {
     height: 80px;
     vertical-align: middle;
+    padding: 0px;
 
     .links {
         float: right;
@@ -36,6 +37,7 @@
         margin-left: 20px;
         opacity: 1;
         line-height: 80px;
+        margin-bottom: 0px;
     }
 }
 
@@ -52,11 +54,13 @@
         justify-content: center;
         align-items: center;
         background-color: $floating-color;
+        padding: 30px;
 
         .logo {
             display: block;
             line-height: normal;
             margin-left: 0px;
+            margin-bottom: 10px;
         }
 
         .links {
